<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refesh">Refesh</string>
    <string name="tv_welcome">Welcome to Weather Forecast</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="btn_key">API key</string>
    <string name="btn_background">Background</string>
    <string name="btn_language">Language</string>
    <string name="btn_exit">Exit</string>
    <string name="gettinglocation">Getting location</string>
    <string name="List_city">List City</string>
    <string name="temperature">Temperature </string>
    <string name="presure">Pressure </string>
    <string name="hummid">Hummidity</string>
    <string name="wind">Wind </string>
    <string-array name="tab_name">
        <item>Current Day</item>
        <item>Week</item>
    </string-array>
    <string name="search_hint">Search City..</string>
    <string name="download">Downloading...</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="c">°C</string>
    <string name="f">F</string>
    <string name="language_en">English</string>
    <string name="language_vn">VietNam</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>

    <string-array name="language_name">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
    </string-array>
    <string-array name="temperature_name">
        <item>°C</item>
        <item>F</item>
    </string-array>

    <string-array name="language_value">
        <item>vi</item>
        <item>en</item>
    </string-array>
    <string-array name="temperature_value">
        <item>c</item>
        <item>f</item>
    </string-array>
    <string name="theme_red">Sky background</string>
    <string name="theme_black">Mountain background</string>
    <string name="theme_pink">Stormy background</string>
    <string name="theme_default">Default background</string>
    <string name="please">Loading data</string>
    <string name="dialogtitle_gps">Turn on GPS</string>
    <string name="dialogtitle_internet">Turn on internet</string>
    <string name="messagedialog_gps">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="messagedialog_internet">Internet is not enabled. Do you want to go to settings menu?</string>
    <string name="messagedialog1">GPS is not enabled</string>
    <string name="messagedialog2">internet is not enabled</string>
    <string name="title_activity_search">Search City</string>
    <string name="btn_search">Search</string>
    <string name="edt_hint">City</string>
    <string name="title_dialog_question">Update Language</string>
    <string name="message_dialog_question">Do you update using current language?</string>
    <string name="btn_yes_dialog_question">Yes</string>
    <string name="btn_no_dialog_question">No</string>
    <string name="input_emty">you need input.</string>
    <string name="find">Not value</string>
    <string name="listcountry">List country</string>

    <string name="clickyes">Click "yes" is refresh app</string>
    <string name="clickno">Click "no" is exit</string>
    <string name="refreshapp">Do you want to refresh or exit?</string>
</resources>
