<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.tuananh.weatherforecast.fragments.ListSettingFragment">

    <RadioGroup
        android:id="@+id/rg_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:id="@+id/rb_c" />

        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/f"
            android:layout_height="wrap_content"
            android:id="@+id/rb_f"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_language"
        android:id="@+id/btn_language" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_background"
        android:id="@+id/btn_background" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:id="@+id/btn_exit" />

</LinearLayout>
