<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.tuananh.weatherforecast.fragments.ThemeFragment">


    <RadioGroup
        android:id="@+id/rg_theme"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RadioButton
            android:id="@+id/rb_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:checked="false"
            android:text="@string/theme_default" />

        <RadioButton
            android:id="@+id/rb_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/theme_black" />

        <RadioButton
            android:id="@+id/rb_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/theme_pink" />

        <RadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/theme_red" />

    </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:gravity="center"
    android:layout_weight="1">
    <Button
        android:id="@+id/btn_save_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />
</LinearLayout>


</LinearLayout>
