<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/search"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        tools:ignore="AppCompatResource"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_refesh"
        android:orderInCategory="100"
        android:title="@string/action_refesh"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/update"
        android:showAsAction="never" />
</menu>
