<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backgroud_search"
    tools:context="com.example.tuananh.weatherforecast.activitys.SearchActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edt_hint"
        android:ems="10"
        android:id="@+id/edt_search"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:id="@+id/btn_search"
        android:layout_weight="1"
        android:layout_alignTop="@+id/btn_cancel_search"
        android:layout_alignParentStart="true"
        android:layout_marginStart="73dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/btn_cancel_search"
        android:layout_weight="1"
        android:layout_below="@+id/edt_search"
        android:layout_alignEnd="@+id/edt_search" />

    <!--<ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_loadsearch"
        android:visibility="invisible"
        android:layout_above="@+id/edt_search"
        android:layout_alignEnd="@+id/btn_cancel_search" />-->

</RelativeLayout>
